--- a/src/main/resources/fxml/InventoryManager.fxml
+++ b/src/main/resources/fxml/InventoryManager.fxml
@@ -7,15 +7,23 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.controllers.InventoryManagerController">
+    <center>
+        <TableView fx:id="itemTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <columns>
+                <TableColumn fx:id="serialNumberColumn" prefWidth="75.0" text="Serial Number" />
+                <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
+                <TableColumn fx:id="valueColumn" prefWidth="75.0" text="Value" />
+            </columns>
+        </TableView>
+    </center>
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="New" />
-                  <MenuItem mnemonicParsing="false" text="Open..." />
-               </items>
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
@@ -30,13 +38,4 @@
         </menus>
       </MenuBar>
    </top>
-   <center>
-      <TableView fx:id="itemsTableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn prefWidth="75.0" text="Serial Number" />
-          <TableColumn prefWidth="75.0" text="Name" />
-            <TableColumn prefWidth="75.0" text="Value" />
-        </columns>
-      </TableView>
-   </center>
 </BorderPane>
